<resources>
    <string name="app_name">Работа с фрагментами</string>
    <string name="login_Text">Вход по почте и паролю</string>
    <string name="input_Email_Address">Введите адрес почты</string>
    <string name="input_Password">Введите пароль</string>
    <string name="input">Вход</string>
    <string name="greetings_Text">Вход %1$s</string>
    <string name="toast">Вход </string>
    <string name="toast_login">Вход не выполнен, входить не куда!</string>
    <string name="chekbox_Exemple">Принятие соглашение</string>
    <string name="enter_text">Ведите текст</string>
    <string name="anr">ANR</string>

</resources>