<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:scaleType="centerCrop"
        android:src="@drawable/original_sunlight"
        app:layout_constraintDimensionRatio="w,30:5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/color_basic"
        android:gravity="start|center_vertical"
        android:paddingStart="55dp"
        android:text="@string/login_Text"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/textEmailAddress"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/input_Email_Address"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="40dp"
        app:layout_constraintBottom_toTopOf="@+id/textPassword"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/loginText"
        app:layout_constraintVertical_chainStyle="spread"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/textPassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/input_Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="40dp"
        app:layout_constraintBottom_toTopOf="@+id/chekboxExemple"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/textEmailAddress"
        tools:ignore="RtlSymmetry" />

    <CheckBox
        android:id="@+id/chekboxExemple"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/chekbox_Exemple"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/loginButton"
        app:layout_constraintEnd_toStartOf="@+id/loginButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/guideline1" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:enabled="true"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/input"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/containerProgressBar"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chekboxExemple"
        app:layout_constraintTop_toBottomOf="@+id/textPassword"
        app:layout_constraintVertical_bias="0.6" />

    <Button
        android:id="@+id/anrButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="3dp"
        android:text="@string/anr"
        app:layout_constraintBottom_toTopOf="@+id/containerProgressBar"
        app:layout_constraintEnd_toStartOf="@+id/buttonDeeplink"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/chekboxExemple" />

    <TextView
        android:id="@+id/errorForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/textPassword" />

    <LinearLayout
        android:id="@+id/containerProgressBar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal|bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/chekboxExemple"
        app:layout_constraintVertical_bias="1.0">


        <ProgressBar
            android:id="@+id/operationProgress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:visibility="visible" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="textEmailAddress,textPassword" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="chekboxExemple,loginButton" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        app:barrierDirection="top"
        app:constraint_referenced_ids="loginButton,chekboxExemple,barrier5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="containerProgressBar"
        tools:layout_editor_absoluteY="330dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp" />

    <Button
        android:id="@+id/buttonDeeplink"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="deeplink"
        app:layout_constraintBaseline_toBaselineOf="@+id/anrButton"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/anrButton" />


</androidx.constraintlayout.widget.ConstraintLayout>

